--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,10 +37,10 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+/env/.env.development
+/env/.env.test.local
+/env/.env.production
+/env/.env.local
 
 # temp directory
 .temp
