--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
